# bsr

./: .gitignore  Compiling_Instructions.md  README.md
src/: CMakeLists.txt  clang+gfortran.cmake  gcc.cmake  speedups.cmake
src/bsr/: CMakeLists.txt
src/bsr/BSR_BMAT4/: CMakeLists.txt  MOD_bsr_breit.f90  MOD_bsr_mat.f90  add_res.f90  add_res_mpi.f90  br_arg.f90  bsr_bmat.f90  bsr_bmat_mpi.f90  check_idef.f90  conf_calc.f90  conf_loop.f90  conf_loop_mpi.f90  get_det_exp.f90  open_br.f90  prepare_det_expn.f90  read_arg.f90  read_conf.f90  read_data.f90  rw_is_need.f90  send_det_exp.f90  send_res_mpi.f90  term_loop.f90
src/bsr/BSR_BREIT/: CMakeLists.txt
src/bsr/BSR_CI/: CMakeLists.txt  I_data.f90  MOD_bsr_ci.f90  MOD_c_data.f90  MOD_l_core.f90  MOD_z_core.f90  bsr_ci.f90  diag.f90  g_factor.f90  inform.f90  matrix_LS.f90  matrix_rel.f90  read_arg.f90  read_conf.f90  read_data.f90  read_int_bnk.f90
src/bsr/BSR_CONF3/: CMakeLists.txt  bsr_conf.f90  bsr_conf_inf.f90  bsr_conf_mpi.f90  check_cfg.f90  check_pertuber.f90  def_orth_cond.f90  def_phys_targ.f90  gen_conf.f90  make_coupling.f90  mod_bsr_conf.f90  read_arg.f90  record_orth.f90  sub_jj.f90  sub_jk.f90  sub_ls.f90
src/bsr/BSR_DMAT3/: bsr_dmat.f90  check_det.f90  d_data.f90  d_matr.f90  d_out.f90  d_prep.f90  dd_out.f90  det_fact.f90  dvec_out.f90  fl_kpol.f90  gen_matrix.f90  gen_zf.f90  get_dm.f90  get_dvr.f90  inf_bsr_dmat.f90  j_case.f90  ls_case.f90  merge_cdata.f90  mod_cmdata.f90  mod_coeffs.f90  mod_dets.f90  mod_dmat.f90  mod_ndef.f90  mod_ndet.f90  mod_param.f90  read_arg.f90  read_conf.f90  read_sol.f90  vdet.f90
src/bsr/BSR_DMAT4/: CMakeLists.txt  MOD_orb_overlaps.f90  add_cdata.f90  add_coef.f90  bsr_dmat.f90  check_det.f90  d_data.f90  d_matr.f90  d_out.f90  d_prep.f90  dd_out.f90  det_fact.f90  dvec_out.f90  get_dvl.f90  idef_type.f90  ifind_pert.f90  inf_bsr_dmat.f90  j_case.f90  ls_case.f90  merge_cdata.f90  mod_dmat.f90  mod_param.f90  r_conf.f90  read_arg.f90  read_bsw.f90  read_solution.f90
src/bsr/BSR_HD3/: b_out.f90  bsr_hd_inf.f90  find_channel_label.f90  h_out.f90  read_arg.f90  rsol_out.f90  sub1_hd.f90  trm_out.f90
src/bsr/BSR_HD3-check/: bsr_hd.f90  bsr_hd_inf.f90  diag_hd.f90  h_out.f90  mod_hd.f90  w_out.f90
src/bsr/BSR_HD4/: b_out.f90  bsr_hd.f90  bsr_hd_inf.f90  check_mat.f90  diag_hd.f90  h_out.f90  mod_hd.f90  r_arg.f90  sub1_hd.f90  trm_out.f90  w_out.f90
src/bsr/BSR_HDB3/: CMakeLists.txt  add_mvc.f90  b_out.f90  bsr_hdb.f90  diag_hd.f90  find_channel_nodes.f90  mod_blacs.f90  mod_hd.f90  pri_mainpar.f90  read_arg.f90  read_diag.f90  rsol_out.f90  sub1_hd.f90  transform_mat.f90  transform_ovl.f90  w_out.f90
src/bsr/BSR_HDB4/: CMakeLists.txt  add_exp.f90  add_mvc.f90  b_out.f90  bsr_hdb.f90  diag_hd.f90  find_channel_label.f90  h_out.f90  mod_blacs.f90  mod_hd.f90  pri_mainpar.f90  r_arg.f90  read_arg.f90  read_diag.f90  rsol_out.f90  sub1_hd.f90  transform_mat.f90  transform_ovl.f90  w_out.f90
src/bsr/BSR_HF/: CMakeLists.txt  I_int.f90  MOD_boef_list.f90  MOD_bsr_hf.f90  MOD_hf_energy.f90  MOD_hf_orbitals.f90  boundary.f90  bsr_hf.f90  check_tails.f90  coef_ee_1conf.f90  get_case.f90  get_estimates.f90  get_spline_param.f90  hf_matrix.f90  hf_nr.f90  orthogonality.f90  plot_bsw.f90  rk.f90  rotate.f90  solve_HF.f90  summry.f90  update_hs.f90  write_cfg.f90  write_nl.f90
src/bsr/BSR_MAT3/: I_data.f90  L_data.f90  O_data.f90  add_cdata.f90  add_coef.f90  bs_orth.f90  bsr_mat.f90  bsr_mat_inf.f90  check_det.f90  check_mat.f90  det_fact.f90  f_values.f90  gen_matrix.f90  get_V.f90  idef_type.f90  inf_bsr_mat.f90  l_core.f90  merge_cdata.f90  mod_cmdata.f90  mod_dets.f90  mod_intmat.f90  mod_ndef.f90  mod_ndet.f90  mod_param.f90  read_arg.f90  read_bsw.f90  read_conf.f90  read_data.f90  record_matrix.f90  state_res.f90  sub1.f90  vdet.f90  z_core.f90  z_data.f90
src/bsr/BSR_MAT3_MPI/: CMakeLists.txt  add_cdata.f90  add_coef.f90  br_arg.f90  br_bsorb.f90  br_channel.f90  br_conf_LS.f90  br_core.f90  br_dets.f90  br_orb_LS.f90  br_phys_orb.f90  br_symc_LS.f90  br_symt_LS.f90  br_target.f90  bs_orth_mpi.f90  bsr_mat_mpi.f90  check_det.f90  check_mat_mpi.f90  det_fact.f90  f_values.f90  gen_matrix.f90  get_V.f90  i_data.f90  idef_type.f90  inf_bsr_mat.f90  l_core.f90  l_data.f90  merge_cdata.f90  mod_cmdata.f90  mod_dets.f90  mod_intmat_mpi.f90  mod_ndef.f90  mod_ndet.f90  mod_param_mpi.f90  mrk_cell.f90  o_data.f90  pri_int.f90  read_arg.f90  read_bsw.f90  read_conf.f90  (+11 more)
src/bsr/BSR_MAT4/: CMakeLists.txt  I_data.f90  L_data.f90  MOD_bsr_mat.f90  MOD_c_data.f90  O_data.f90  Z_data.f90  br_arg.f90  bs_orth.f90  bsr_mat.f90  bsr_mat_inf.f90  bsr_mat_mpi.f90  check_det.f90  check_idef.f90  check_mat.f90  check_mat_mpi.f90  collect_mpi.f90  f_values.f90  gen_matrix.f90  get_v.f90  idef_type.f90  l_core.f90  matrix_updates.f90  mod_mpi.f90  read_arg.f90  read_conf.f90  read_data.f90  read_matrix.f90  read_matrix_mpi.f90  record_matrix.f90  record_matrix_mpi.f90  rw_mask.f90  state_res.f90  state_res_mpi.f90  stop_mpi.f90  sub1.f90  sub1_mpi.f90  z_core.f90
src/bsr/BSR_MCHF/: CMakeLists.txt  MOD_bsr_mchf.f90  ab.f90  boundary.f90  bsr_mchf.f90  check_tails.f90  def_orbitals.f90  diag.f90  get_case.f90  get_estimates.f90  get_spline_param.f90  l_core.f90  mchf_matrix.f90  orthogonality.f90  read_ang_coef.f90  read_conf.f90  rotate.f90  scf_mchf.f90  solve_direct.f90  solve_eiv.f90  solve_nr.f90  summry.f90
src/bsr/BSR_MULT/: CMakeLists.txt  Idet_simple.f90  pri_mult.f90  r_conf.f90  test_mult_2conf.f90
src/bsr/BSR_PHOT3/: CMakeLists.txt  ak_coef.f90  bsr_phot.f90  crees.f  mod_phot.f90  phot_sec.f90  read_Ddat.f90  read_Hdat.f90  read_Wdat.f90  read_arg.f90  read_bound.f90  sort_photo.f90  zaface.f90
src/bsr/BSR_PHOT3_MPI/: CMakeLists.txt  ak_coef.f90  bsr_phot.f90  crees.f  mod_phot.f90  phot_sec.f90  read_Ddat.f90  read_Hdat.f90  read_Wdat.f90  read_arg.f90  read_bound.f90  sort_photo.f90  sym_mat1.f90  zaface.f90  zopen.f90
src/bsr/BSR_POL3/: bsr_pol.f90  inf_bsr_pol.f90  mod_pol.f90  read_arg.f90  (+6 more)
src/dbsr/: CMakeLists.txt
src/libs/: CMakeLists.txt  mpi.f90
(+1069 files in other folders)
