add_subdirectory(BSR_BMAT4)
add_subdirectory(BSR_BREIT)
add_subdirectory(BSR_CI)
add_subdirectory(BSR_CONF3)
add_subdirectory(BSR_DMAT3)
add_subdirectory(BSR_DMAT4)
add_subdirectory(BSR_HD3)
add_subdirectory(BSR_HD3-check)
add_subdirectory(BSR_HD4)
add_subdirectory(BSR_HF)
add_subdirectory(BSR_MAT3)
add_subdirectory(BSR_MAT4)
add_subdirectory(BSR_MCHF)
add_subdirectory(BSR_MULT)
add_subdirectory(BSR_PHOT3)
add_subdirectory(BSR_POL3)
add_subdirectory(BSR_PREP3)
add_subdirectory(BSR_RECOUP4)
add_subdirectory(BSR_UTILS)

if(${MPI_Fortran_FOUND})
  add_subdirectory(BSR_MAT3_MPI)
  add_subdirectory(BSR_PHOT3_MPI)
  if(${SCALAPACK_FOUND})
    add_subdirectory(BSR_HDB3)
    add_subdirectory(BSR_HDB4)
  endif()
endif()
